--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  background: url('/assets/images/login_bg.jpg') no-repeat;
+  background: url('../images/login_bg.jpg') no-repeat;
   background-size: cover;
 }
 
